Updated with new version and jdk 17 upgrade